added mission photos

--- a/about.html
+++ b/about.html
@@ -50,12 +50,13 @@ leading.
 
     <p>Elementary and middle school students should be able to explore their curiosity of the natural world. However,
         the reality is that many students do not have easy access to high quality STEM education due to a lack of time,
-        money, or resources. Exposure to subjects at elementary school are related to what courses students later
-        take—the more they are taught early on, the more they learn and the better they perform on future tests. This is
-        where BEAM steps in. By writing our own engaging and hands-on curriculum, providing a small student to mentor
-        ratio, and encouraging problem-based learning, BEAM hopes to change perceptions of science and
+        money, or resources. Exposure to subjects in elementary school are related to what courses students later take,
+        and consequently their future careers. By writing our own engaging and hands-on curriculum, providing a small
+        student to mentor ratio, and encouraging problem-based learning, BEAM hopes to change perceptions of science and
         engineering—making it more fun and approachable and thus encouraging students of all socioeconomic backgrounds
         to pursue STEM careers. </p>
+        <img src = "images/mission1.jpg">
+        <img src = "images/mission2.jpg">
 </div>
 <div id="Structure" class="tabcontent">
     <h2> Our Staff </h2>
