--- a/calendar.html
+++ b/calendar.html
@@ -1,14 +1,14 @@
 ---
-title: Our Upcoming Events
+title: Our Events
 
 
 ---
 
 <div style="text-align:center">
-        <iframe src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YmVhbS5vdXRyZWFjaEBnbWFpbC5jb20&amp;color=%23039BE5" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-        
-          
-
-    </div>
+    <iframe
+        src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YmVhbS5vdXRyZWFjaEBnbWFpbC5jb20&amp;color=%23039BE5"
+        style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
+
+</div>
