added icons to structure

--- a/about.html
+++ b/about.html
@@ -145,11 +145,11 @@ description:
 
 <section id="Structure" class="tabcontent">
 <section id = "Short-info">
-    <p>BEAM was founded in 2008 as both a non-profit student organization and DeCal. We are entirely student-run!</p>
+    <p style = "font-size: 1em;">BEAM was founded in 2008 as both a non-profit student organization and DeCal. <br> We are entirely student-run!</p>
     <div class = "icon-row">
-        <div class = "icon"></div>
-        <div class = "icon"></div>
-        <div class = "icon"></div>
+        <div class = "info-graph"> <img class = "icon" src = "../images/icons/mentor.png"><h1 class = "count">120</h1><h2 class = "parts">MENTORS</h2></div>
+        <div style = "padding-left: 10%;" class = "info-graph"><img class = "icon" src = "../images/icons/kids.png"><h1 class = "count" >300+</h1><h2 class = "parts">K-8 STUDENTS</h2></div>
+        <div style = "padding-left: 10%;" class = "info-graph"><img class = "icon" src = "../images/icons/school.png"><h1 class = "count" >16</h1><h2 class = "parts">SCHOOLS</h2></div>
 
     </div>
 </section>
