--- a/about.html
+++ b/about.html
@@ -144,20 +144,33 @@ description:
 </section>
 
 <section id="Structure" class="tabcontent">
-<section id = "Short-info">
-    <p style = "font-size: 1em;">BEAM was founded in 2008 as both a non-profit student organization and DeCal. <br> We are entirely student-run!</p>
-    <div class = "icon-row">
-        <div class = "info-graph"> <img class = "icon" src = "../images/icons/mentor.png"><h1 class = "count">120</h1><h2 class = "parts">MENTORS</h2></div>
-        <div style = "padding-left: 10%;" class = "info-graph"><img class = "icon" src = "../images/icons/kids.png"><h1 class = "count" >300+</h1><h2 class = "parts">K-8 STUDENTS</h2></div>
-        <div style = "padding-left: 10%;" class = "info-graph"><img class = "icon" src = "../images/icons/school.png"><h1 class = "count" >16</h1><h2 class = "parts">SCHOOLS</h2></div>
+    <section id="Short-info">
+        <div class="black">
+            <p style="font-size: 1em;">BEAM was founded in 2008 as both a non-profit student organization and DeCal.
+                <br> We are entirely student-run!</p>
+            <div class="icon-row">
+                <div class="info-graph"> <img class="icon" src="../images/icons/mentor.png">
+                    <h1 class="count">120</h1>
+                    <h2 class="parts">MENTORS</h2>
+                </div>
+                <div style="margin-left: 10%;" class="info-graph"><img class="icon" src="../images/icons/kids.png">
+                    <h1 class="count">300+</h1>
+                    <h2 class="parts">K-8 STUDENTS</h2>
+                </div>
+                <div style="margin-left: 20%;" class="info-graph"><img class="icon" src="../images/icons/school.png">
+                    <h1 class="count">16</h1>
+                    <h2 class="parts">SCHOOLS</h2>
+                </div>
 
-    </div>
-</section>
+            </div>
+        </div>
+        <div><img class="structure-image" src="../images/structure.jpg"></div>
+    </section>
     <div id="committees" class="news-thumbnail" style="text-align:center">
         <h2> Our Staff </h2>
 
 
-        <p style = "font-size: 1em;">BEAM is run by 40 staff members, divided into 6 committees: <br>
+        <p style="font-size: 1em;">BEAM is run by 40 staff members, divided into 6 committees: <br>
             curriculum, external affairs, logistics, mentor development, outreach, and site leading.</p>
         <div class="descriptions">
             <div class="left-column">
