added buttons and slidshow to events page

--- a/calendar.html
+++ b/calendar.html
@@ -1,13 +1,24 @@
 ---
-title: Our Events
-
-
+title: Events
+heading:
+description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughtout our community . Check out some highlights from our previous events below, and see what upcoming events we will be at on our calendar!
 ---
 
+<!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
+<div class="slideshow">
+  <div class="slide1"><img class="slide-image" src="../images/test1.jpg"></div>
+  <div class="slide2"><img class="slide-image" src="../images/test2.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
+
+</div>
+
 <div style="text-align:center">
-    <iframe
-        src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YmVhbS5vdXRyZWFjaEBnbWFpbC5jb20&amp;color=%23039BE5"
-        style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe
+    src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YmVhbS5vdXRyZWFjaEBnbWFpbC5jb20&amp;color=%23039BE5"
+    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
 
