--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description: Berkeley Engineers and Mentors
 	<br>
 	<h1 id="words">Berkeley Engineers and Mentors</h1>
 	<br>
-	<a class = "scroll-down" href="#target"></a>
+	<a class="scroll-down" href="#target"></a>
 
 </div>
 
@@ -31,23 +31,25 @@ description: Berkeley Engineers and Mentors
 	<div id="carousel-2"><img src="/images/test2.jpg" alt="Screenshot" class="carousel-photo"/></div>
 	<div id="carousel-3"><img src="/images/test3.jpg" alt="Screenshot" class="carousel-photo"/></div>
   </div> -->
-<div class="content" style = "flex-direction: row;">
+<div class="content" style="flex-direction: row;">
 	<a name="target"></a>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2 class = "header">Who We Are</h2>
-				<p class = "body"> Berkeley Engineers and Mentors (BEAM) fuses science education with mentorship by leading weekly
+				<h2 class="header">Who We Are</h2>
+				<p class="body"> Berkeley Engineers and Mentors (BEAM) fuses science education with mentorship by
+					leading weekly
 					hands-on science and engineering lessons at local elementary and middle schools. We provide
 					accessible science education to our local communities in hopes of inspiring students of all
 					socioeconomic backgrounds to pursue careers in STEM.
 				</p>
-
+				<!-- style = "padding: 2%; width: 35%; -->
 				<!-- !!!remember to change after deploying -->
-				<a class="link" href="about">Read more ></a>
+				<a id="link" href="about"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: 1em; font-weight: normal;">Read More
+						</span></button></a>
 			</div>
 			<div class="image">
-				<img  src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -55,11 +57,14 @@ description: Berkeley Engineers and Mentors
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2 class = "header">What We Do </h2>
-				<p class = "body"> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area, teaching over
+				<h2 class="header">What We Do </h2>
+				<p class="body"> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area,
+					teaching over
 					300 students a week with our engaging project
 					based science and engineering lessons.</p>
-				<a class="link" href="http://127.0.0.1:4000/lessons/">Read more ></a>
+				<a id="link" href="lessons"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span>Read
+							More
+						</span></button></a>
 			</div>
 			<div style="height:400px; width:40%; overflow:hidden; margin-left: 2%">
 				<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;"
@@ -73,11 +78,16 @@ description: Berkeley Engineers and Mentors
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2 class = "header">Join the Family</h2>
-				<p class = "body"> Interested in being a part of the BEAM team? Follow us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info session!</p>
+				<h2 class="header">Join the Family</h2>
+				<p class="body"> Interested in being a part of the BEAM team? Follow us on <a
+						href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info
+					session!</p>
+					<a id="link" href="join"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span>Read
+						More
+					</span></button></a>
 			</div>
 			<div class=" image">
-						<img src="/images/decal-tower.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/decal-tower.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
