fixed home page button styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ description: Berkeley Engineers and Mentors
 				</p>
 				<!-- style = "padding: 2%; width: 35%; -->
 				<!-- !!!remember to change after deploying -->
-				<a id="link" href="about"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: 1em; font-weight: normal;">Read More
+				<a id="link" href="about"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: .8em; font-weight: normal;">Read More
 						</span></button></a>
 			</div>
 			<div class="image">
@@ -62,7 +62,7 @@ description: Berkeley Engineers and Mentors
 					teaching over
 					300 students a week with our engaging project
 					based science and engineering lessons.</p>
-				<a id="link" href="lessons"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span>Read
+				<a id="link" href="lessons"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: .8em; font-weight: normal;">Read
 							More
 						</span></button></a>
 			</div>
@@ -82,7 +82,7 @@ description: Berkeley Engineers and Mentors
 				<p class="body"> Interested in being a part of the BEAM team? Follow us on <a
 						href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info
 					session!</p>
-					<a id="link" href="join"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span>Read
+					<a id="link" href="join"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: .8em; font-weight: normal;">Read
 						More
 					</span></button></a>
 			</div>
