--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@ description:
     <div id="news">
         <h2>News</h2>
         <div class="news-row">
-            <div class="thumbnail npr">
+            <div class="thumbnail left">
                 <div class="news-logo">
                     <img src="/images/npr.png">
                 </div>
@@ -98,7 +98,7 @@ description:
                 </div>
             </div>
 
-            <div class="thumbnail berk">
+            <div class="thumbnail mid">
                 <div class="news-logo">
                     <img src="/images/berkscirev.png">
                 </div>
@@ -121,7 +121,7 @@ description:
                 </div>
             </div>
 
-            <div class="thumbnail sfgate">
+            <div class="thumbnail right">
                 <div class="news-logo">
                     <img src="/images/sfgate.png">
                 </div>
