--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@ description:
 <section id="Structure" class="tabcontent">
     <section id="Short-info">
         <div class="black">
-            <p style="font-size: 1.125em; width: 35em;">BEAM was founded in 2008 as both a non-profit student organization and DeCal.
+            <p style="font-size: 1.125em; width: 37em;">BEAM was founded in 2008 as both a non-profit student organization and DeCal.
                 <br> We are entirely student-run!</p>
             <div class="icon-row">
                 <div class="info-graph"> <img class="icon" src="../images/icons/mentor.png">
@@ -263,7 +263,7 @@ description:
 
         </div>
     </div>
-    <h2> Our Staff </h2>
+    <h2 style = "margin-top: 5%; margin-bottom: 5%;"> Meet Our Staff Members</h2>
     <div class="content" id="about-content">
         <div id="tiles">
         </div>
